@@ -5,6 +5,7 @@
 * Fix - API key and email grabbed from the correct settings tab
 * Fix - Added TO Search as subtab on LSX TO settings page
 * Dev - Fixed menu navigation improved
+* Fix - Code refactored to follow the latest Tour Operator plugin workflow
 
 ### 1.0.2
 * Fix - Fixed all prefixes replaces (to_ > lsx_to_, TO_ > LSX_TO_)
